Fix incorrect display Root on Versions Page Task: Fix incorrect display Root on Versions Page (8e4050e0-f6b3-11ea-884a-b353f5711945) * removed kt-body class from root row * added kt-tree to help with the scroll bar length issue at the bottom of the default tree. The extra space at the bottom was already in production.

--- a/kohese-portal/client/src/components/tree/tree.component.scss
+++ b/kohese-portal/client/src/components/tree/tree.component.scss
@@ -36,6 +36,11 @@ virtual-scroll {
   overflow: auto;
 }
 
+.kt-tree {
+  height: calc(100% - 30px);
+  overflow: auto;
+}
+
 :host {
   height: 100%;
   width: 100%;
